--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Major Skills</h2>
-                    <h3 class="section-subheading text-muted">3+ Years of Experience doing:</h3>
+                    <h3 class="section-subheading text-muted">This is probably why you're looking for me:</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -12,31 +12,32 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-html5 fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Front-end development</h4>
-                    <p class="text-muted">HTML5, CSS3, Javascript</p>
+                    <h4 class="service-heading">Design Research</h4>
+                    <p class="text-muted">Design research aims to shed light on human behavior, to better understand the world and the specifics of the cultures we live in. As a trained social scientist I have experience in both quantitative & qualitative research methodologies including interviewing & ethnography. When applied, this research builds a basis for human & user centered design.
+</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-tablet fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Responsive design using technologies like CSS3, Bootstrap, jQuery</p>
+                    <h4 class="service-heading">Facilitation</h4>
+                    <p class="text-muted">I’ve lead diverse groups of stakeholders and students through understanding the role of  design, social research, and design thinking exercises and have helped them develop solutions to complex problems. My areas of specialization include research methodology, socially responsive design, and community empowerment.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-film fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Multimedia Creation</h4>
-                    <p class="text-muted">Leveraging photography, film and illustrations</p>
+                    <h4 class="service-heading">Visual Communication</h4>
+                    <p class="text-muted">As a professional designer, I work in a variety of the media to create a visual story. I am constantly seeking new techniques to apply to my visual tool belt to push my content one step further. My background is in graphic design and photojournalism, with recent work in data visualization, prototyping, and public awareness campaigns.</p>
                 </div>
             </div>
             <div class="bg-png">
             <div class="row ">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Minor Skills</h2>
-                    <h3 class="section-subheading text-muted">~1 Year of Experience doing:</h3>
+                    <h2 class="section-heading">Other Skills</h2>
+                    <h3 class="section-subheading text-muted">I can do a lot more than the above:</h3>
                 </div>
             </div>
             <div class="row text-center  ">
@@ -45,23 +46,23 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-cube fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Back-end Development</h4>
-                    <p class="text-muted">Ruby (Ruby on Rails), Javascript (Node.js/Express), C# (ASP.NET), PHP </p>
+                    <h4 class="service-heading">Design Strategy</h4>
+                    <p class="text-muted"></p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-database fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Databases</h4>
-                    <p class="text-muted">Relational (MySQL, MSSQL, SQLite) and NoSQL (MongoDB)</p>
+                    <h4 class="service-heading">Curriculum Design</h4>
+                    <p class="text-muted"></p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">RESTful API development and AJAX</h4>
+                    <h4 class="service-heading">Presentation Design</h4>
                     <p class="text-muted"></p>
                 </div>
             </div>
@@ -71,16 +72,16 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-cubes fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">MVC Architecture & Design Patterns</h4>
-                    <p class="text-muted">Ruby on Rails, ExpressJS, ASP.NET</p>
+                    <h4 class="service-heading">Event Planning & Organizing</h4>
+                    <p class="text-muted"></p>
                 </div>
                 <div class="col-md-6">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-git fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Source Code Management & Distributed Revision Control</h4>
-                    <p class="text-muted">Git</p>
+                    <h4 class="service-heading">Yoga and Bowspring Classes</h4>
+                    <p class="text-muted"></p>
                 </div>
             </div>
             </div>
@@ -96,24 +97,24 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Mobile Development</h4>
-                    <p class="text-muted">Android, iOS and PhoneGap</p>
+                    <h4 class="service-heading">Front End Web Development</h4>
+                    <p class="text-muted"></p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-wrench fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Testing</h4>
-                    <p class="text-muted">RSpec and Jasmine</p>
+                    <h4 class="service-heading">Mobile Development</h4>
+                    <p class="text-muted"></p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Front-end Javascript Frameworks</h4>
-                    <p class="text-muted">Angular.js</p>
+                    <h4 class="service-heading">tktktktktkt</h4>
+                    <p class="text-muted"></p>
                 </div>
             </div>
             <div class="row text-center">
@@ -122,15 +123,15 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-cloud-upload fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Cloud Deployment</h4>
-                    <p class="text-muted">Heroku</p>
+                    <h4 class="service-heading">tktktktkt</h4>
+                    <p class="text-muted"></p>
                 </div>
                 <div class="col-md-6">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-wrench fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Coffeescript</h4>
+                    <h4 class="service-heading">tktktktkt</h4>
                     <p class="text-muted"></p>
                 </div>
             </div>
