--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top"></a>
+                <a class="navbar-brand page-scroll" href="#page-top">Justin Wuetcher </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -41,8 +41,8 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">I'm Rick Kim</div>
-                <div class="intro-heading">Web Developer<br/> Designer <br/> and Problem Solver</div>
+                <div class="intro-lead-in">I'm Justin Wuetcher</div>
+                <div class="intro-heading">Design Research<br/>And Design Strategy <br/> For Social Impact and Innovation</div>
                 <a href="#skills" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
@@ -52,4 +52,3 @@
           {% if page.title %}<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>{% endif %}
         {% endfor %}
  -->
-
