--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -353,7 +353,7 @@ section h3.section-subheading {
 }
 
 .service-heading {
-    margin: 15px 0;
+    margin: 15px 10px;
     text-transform: none;
 }
 
