--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -353,7 +353,9 @@ section h3.section-subheading {
 }
 
 .service-heading {
-    margin: 15px 10px;
+  padding-left: 10px 0;
+  padding-right: 10px 0;
+    margin: 15px 0;
     text-transform: none;
 }
 
