remove padding and unalign skill text

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -13,7 +13,7 @@
                         <i class="fa fa-html5 fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Design Research</h4>
-                    <p align="justify" class="text-muted">Design research aims to shed light on human behavior, to better understand the world and the specifics of the cultures we live in. As a trained social scientist I have experience in both quantitative & qualitative research methodologies including interviewing & ethnography. When applied, this research builds a basis for human & user centered design.
+                    <p class="text-muted">Design research aims to shed light on human behavior, to better understand the world and the specifics of the cultures we live in. As a trained social scientist I have experience in both quantitative & qualitative research methodologies including interviewing & ethnography. When applied, this research builds a basis for human & user centered design.
 </p>
                 </div>
                 <div class="col-md-4">
@@ -22,7 +22,7 @@
                         <i class="fa fa-tablet fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Facilitation</h4>
-                    <p align="justify" class="text-muted">I’ve lead diverse groups of stakeholders and students through understanding the role of  design, social research, and design thinking exercises and have helped them develop solutions to complex problems. My areas of specialization include research methodology, socially responsive design, and community empowerment.</p>
+                    <p class="text-muted">I’ve lead diverse groups of stakeholders and students through understanding the role of  design, social research, and design thinking exercises and have helped them develop solutions to complex problems. My areas of specialization include research methodology, socially responsive design, and community empowerment.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -30,7 +30,7 @@
                         <i class="fa fa-film fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Visual Communication</h4>
-                    <p align="justify" class="text-muted">As a professional designer, I work in a variety of the media to create a visual story. I am constantly seeking new techniques to apply to my visual tool belt to push my content one step further. My background is in graphic design and photojournalism, with recent work in data visualization, prototyping, and public awareness campaigns.</p>
+                    <p class="text-muted">As a professional designer, I work in a variety of the media to create a visual story. I am constantly seeking new techniques to apply to my visual tool belt to push my content one step further. My background is in graphic design and photojournalism, with recent work in data visualization, prototyping, and public awareness campaigns.</p>
                 </div>
             </div>
             <div class="bg-png">
