Skills Icon Update

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -10,7 +10,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-html5 fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Design Research</h4>
                     <p class="text-muted">Design research aims to shed light on human behavior, to better understand the world and the specifics of the cultures we live in. As a trained social scientist I have experience in both quantitative & qualitative research methodologies including interviewing & ethnography. When applied, this research builds a basis for human & user centered design.
@@ -19,7 +19,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-tablet fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Facilitation</h4>
                     <p class="text-muted">I’ve lead diverse groups of stakeholders and students through understanding the role of  design, social research, and design thinking exercises and have helped them develop solutions to complex problems. My areas of specialization include research methodology, socially responsive design, and community empowerment.</p>
@@ -27,7 +27,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-film fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-rocket fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Visual Communication</h4>
                     <p class="text-muted">As a professional designer, I work in a variety of the media to create a visual story. I am constantly seeking new techniques to apply to my visual tool belt to push my content one step further. My background is in graphic design and photojournalism, with recent work in data visualization, prototyping, and public awareness campaigns.</p>
@@ -44,7 +44,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-cube fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-map-signs fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Design Strategy</h4>
                     <p class="text-muted"></p>
@@ -52,7 +52,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-database fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-university fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Curriculum Design</h4>
                     <p class="text-muted"></p>
@@ -60,7 +60,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-bar-chart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Presentation Design</h4>
                     <p class="text-muted"></p>
@@ -70,7 +70,7 @@
                 <div class="col-md-6">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-cubes fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Event Planning & Organizing</h4>
                     <p class="text-muted"></p>
@@ -78,7 +78,7 @@
                 <div class="col-md-6">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-git fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-heart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Yoga and Bowspring Classes</h4>
                     <p class="text-muted"></p>
