--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,6 +5,9 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Experience & Education</h2>
                     <h3 class="section-subheading text-muted">Relevance experience and education</h3>
+                    <h3 class="section-subheading text-muted">
+                        <a href="img/Wuetcher_Justin_resume">Download my CV</a>
+                    </h3>
                 </div>
             </div>
             <div class="row">
@@ -12,16 +15,16 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/MICA.jpg" alt="MICA Logo">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2011-2014</h4>
-                                    <h4 class="subheading">Freelance Web Developer / Designer</h4>
+                                    <h4>2015-2016</h4>
+                                    <h4 class="subheading">M.A. Social Design, MICA</h4>
                                 </div>
                                 <div class="timeline-body">
                                         <ul>
-                                            <li>    
+                                            <li>
                                                 <p class="text-muted">
                                                 Designed and developed websites and applications for clients in Vancouver and K/W
                                                 </p>
@@ -42,16 +45,16 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/LBS.jpg" alt="Louisville Bowspring Logo">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2013-2014</h4>
-                                    <h4 class="subheading">Trios College, Applications Developer Program</h4>
+                                    <h4>2014-2015</h4>
+                                    <h4 class="subheading">Louisville Bowspring, Founder and Co-Owner</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <ul>
-                                            <li>    
+                                            <li>
                                                 <p class="text-muted">
                                                 Object-oriented programming patterns and techniques in Java, C#, Ruby
                                                 </p>
@@ -75,14 +78,36 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/WKU.jpg" alt="WKU logo">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2007-2011</h4>
-                                    <h4 class="subheading">Mechanical Engineering CO-OP, <br /> University of Waterloo </h4>
+                                    <h4>2007-2014</h4>
+                                    <h4 class="subheading">Graphic Design, <br /> Western Kentucky University </h4>
                                 </div>
                                 <div class="timeline-body">
+                                      <ul>
+                                              <li>
+                                                  <p class="text-muted">
+                                                  Graduate work in Sociology
+                                                  </p>
+                                              </li>
+                                              <li>
+                                                  <p class="text-muted">
+                                                   Undergraduate Degree: Graphic Design
+                                                  </p>
+                                              </li>
+                                              <li>
+                                                  <p class="text-muted">
+                                                    Undergraduate Minor: Sociology
+                                                  </p>
+                                              </li>
+                                              <li>
+                                                  <p class="text-muted">
+                                                    Undergraduate Minor: American Sign Language
+                                                  </p>
+                                              </li>
+                                          </ul>
                                 </div>
                             </div>
                         </li>
