--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
                     <h2 class="section-heading">Experience & Education</h2>
                     <h3 class="section-subheading text-muted">Relevance experience and education</h3>
                     <h3 class="section-subheading text-muted">
-                        <a href="img/Wuetcher_Justin_resume.pdf">Download my CV</a>
+                        <a href="img/Wuetcher_Justin_Resume.pdf" download>Download my CV</a>
                     </h3>
                 </div>
             </div>
