--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -16,11 +16,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/anguar-invasive.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/PSAP.png" class="img-responsive" alt="Sound World Solutions CS-50 personal sound amplification Device">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Invasive Fish of Canada</h4>
-                        <p class="text-muted">Angularjs</p>
+                        <h4>Baltimore HEARS</h4>
+                        <p class="text-muted">Design Strategy & Service Design</p>
                     </div>
                 </div>
 
@@ -31,11 +31,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/fishmap.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/OYCAW.png" class="img-responsive" alt="two middle school students brainstorming">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>FishMap</h4>
-                        <p class="text-muted">Ruby on Rails / Google Maps</p>
+                        <h4>Youth Smoking Prevention</h4>
+                        <p class="text-muted">Facilitation & Project Management</p>
                     </div>
                 </div>
 
@@ -46,11 +46,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/structur3d.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/OYCAW.png" class="img-responsive" alt="two middle school students mind mapping on bright neon paper">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Structur3D Printing</h4>
-                        <p class="text-muted">Web Design</p>
+                        <h4>Facilitation & Project Management</h4>
+                        <p class="text-muted">Facilitation & Brand Strategy</p>
                     </div>
                 </div>
 
@@ -67,12 +67,12 @@
                         <h4>Portfolio</h4>
                         <p class="text-muted">Web Design</p>
                     </div>
-                </div>          -->   
-                
+                </div>          -->
+
             </div>
              <div class="row">
 
-                
+
 
                 <div class="col-md-6 col-sm-6 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
@@ -81,11 +81,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/s3dproducts.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/NKH.png" class="img-responsive" alt="Three extra large postit notes each with a picture attached to it creating a persona">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Structur3D Printing</h4>
-                        <p class="text-muted">Multimedia Creation</p>
+                        <h4>No Kid Hungry</h4>
+                        <p class="text-muted">Design Research & Design Visualization</p>
                     </div>
                 </div>
 
