--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -31,7 +31,7 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/OYCAW.png" class="img-responsive" alt="two middle school students brainstorming">
+                        <img src="img/portfolio/YSP.png" class="img-responsive" alt="Baltimore City Health Department Advertisement urging citizens to dial 311 if they see a store selling tobacco to minors">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Youth Smoking Prevention</h4>
