--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -60,7 +60,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-bar-chart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-bar-chart-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Presentation Design</h4>
                     <p class="text-muted"></p>
@@ -113,7 +113,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">tktktktktkt</h4>
+                    <h4 class="service-heading">3D Printing</h4>
                     <p class="text-muted"></p>
                 </div>
             </div>
