--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -44,7 +44,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-map fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-map-marker fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Design Strategy</h4>
                     <p class="text-muted"></p>
