--- a/_includes/about.html
+++ b/_includes/about.html
@@ -19,8 +19,10 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
+                                  <div class="mica-logo">
                                     <h4>2015-2016</h4>
                                     <h4 class="subheading">M.A. Social Design, MICA</h4>
+                                  </div>
                                 </div>
                                 <div class="timeline-body">
                                         <ul>
