--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -634,6 +634,16 @@ section h3.section-subheading {
     }
 }
 
+.mica-logo{
+  background-color: white;
+  border-radius: 100%;
+  position: relative;
+  top: 8px;
+  left: 8px;
+  width: 140px;
+  height: 140px;
+}
+
 .team-member {
     margin-bottom: 50px;
     text-align: center;
