--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,14 +15,15 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
+                              <div class="timeline-mica">
+                                <div class="mica-logo">
                                 <img class="img-circle img-responsive" src="img/about/MICA.jpg" alt="MICA Logo">
-                            </div>
+                                </div>
+                              </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                  <div class="mica-logo">
                                     <h4>2015-2016</h4>
                                     <h4 class="subheading">M.A. Social Design, MICA</h4>
-                                  </div>
                                 </div>
                                 <div class="timeline-body">
                                         <ul>
