MICA logo fixed

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,11 +15,10 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                              <div class="timeline-mica">
-                                <div class="mica-logo">
-                                <img class="img-circle img-responsive" src="img/about/MICA.jpg" alt="MICA Logo">
-                                </div>
+                              <div class="mica-logo">
+                                <img class="img-responsive" src="img/about/MICA.jpg" alt="MICA Logo">
                               </div>
+                            </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>2015-2016</h4>
