Font-Awesome Update

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,9 +15,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                              <div class="mica-logo">
-                                <img class="img-responsive" src="img/about/MICA.jpg" alt="MICA Logo">
-                              </div>
+                              <img class="img-responsive" src="img/about/MICA.svg" alt="MICA Logo">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
