Portfolio Public Market Update

--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -49,7 +49,7 @@
                         <img src="img/portfolio/OYCAW.png" class="img-responsive" alt="two middle school students mind mapping on bright neon paper">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Facilitation & Project Management</h4>
+                        <h4> Youth Counter Ad Workshop</h4>
                         <p class="text-muted">Facilitation & Brand Strategy</p>
                     </div>
                 </div>
@@ -96,11 +96,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/poolparty.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/PublicMarket.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Pool Party Plus</h4>
-                        <p class="text-muted">Web Design / Wordpress</p>
+                        <h4>Broadway Public Market</h4>
+                        <p class="text-muted">Service Design, Identity Design</p>
                     </div>
                 </div>
 
