--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -123,7 +123,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-cloud-upload fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">tktktktkt</h4>
+                    <h4 class="service-heading"> ASL Interpreting</h4>
                     <p class="text-muted"></p>
                 </div>
                 <div class="col-md-6">
@@ -131,7 +131,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-wrench fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">tktktktkt</h4>
+                    <h4 class="service-heading">SAS</h4>
                     <p class="text-muted"></p>
                 </div>
             </div>
